---
source: eksnode/src/kubelet/credential.rs
expression: buf
---
"{\n  \"kind\": \"CredentialProviderConfig\",\n  \"apiVersion\": \"credentialprovider.kubelet.k8s.io/v1alpha1\",\n  \"providers\": [\n    {\n      \"name\": \"ecr-credential-provider\",\n      \"matchImages\": [\n        \"*.dkr.ecr.*.amazonaws.com\",\n        \"*.dkr.ecr.*.amazonaws.com.cn\",\n        \"*.dkr.ecr-fips.*.amazonaws.com\",\n        \"*.dkr.ecr.*.c2s.ic.gov\",\n        \"*.dkr.ecr.*.sc2s.sgov.gov\"\n      ],\n      \"defaultCacheDuration\": \"12h\",\n      \"apiVersion\": \"credentialprovider.kubelet.k8s.io/v1\"\n    }\n  ]\n}"
